<resources>
    <string name="app_name">PadelApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="noticias">Noticias</string>
    <string name="calendario">Calendario</string>
    <string name="torneos">Torneos</string>
    <string name="jugadores">Jugadores</string>
    <string name="upload">Upload</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_pareja">Nombre Pareja</string>
    <string name="posicion">Posición</string>
    <string name="naciemiento">Naciemiento</string>
    <string name="altura">Altura</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="crearNuevoJugador">Crear un Jugador</string>
    <string name="detalle_jugador">Detalle Jugador</string>
    <string name="add_item">Add Item</string>
    <string name="edad">Edad</string>
    <string name="crearNuevoTorneo">Crear un Torneo</string>
    <string name="nombreTorneo">Nombre del Torneo</string>
    <string name="localidadTorneo">Localidad del Torneo</string>
    <string name="fechaTorneo">Fecha del Torneo</string>
    <string name="logo_desc">Logo de la aplicación</string>
</resources>