<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/lavender_border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardarJugador"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/lavender"/>

            <ImageView
                android:id="@+id/subirImagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/uploadimg" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/nombre"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/nombre"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/apellido"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/apellido"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/altura"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/altura"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/nacimiento"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/naciemiento"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/posicion"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/posicion"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/pareja"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/nombre_pareja"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/guardar"
                android:id="@+id/guardarButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>
