<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:background="@drawable/lavender_border">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/logo"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/logo_desc" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crearNuevoTorneo"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/torneoNombre"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/nombreTorneo"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/lavender"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/localidadTorneo"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/localidadTorneo"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/lavender" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/fechaTorneo"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/fechaTorneo"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/lavender"
                    android:focusable="false"
                    android:inputType="date"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/guardar"
                    android:id="@+id/guardarButton"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    app:cornerRadius="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
